Add GET /v1/users/current
